# letswrite

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/letswrite-ai/: Cargo.toml
crates/letswrite-ai/src/: agent.rs  context.rs  credentials.rs  error.rs  lib.rs  provider.rs  wire.rs
crates/letswrite-ai/src/providers/: anthropic.rs  mod.rs
crates/letswrite-ai/tests/: anthropic_integration.rs
crates/letswrite-app/: Cargo.toml
crates/letswrite-app/src/: app.rs  assistant.rs  context_builder.rs  editor.rs  main.rs  minimap.rs  presets.rs  search.rs  sidebar.rs  syntax.rs
crates/letswrite-app/src/views/: characters.rs  corkboard.rs  locations.rs  mod.rs  relationships.rs  research.rs  timeline.rs
crates/letswrite-core/: Cargo.toml
crates/letswrite-core/i18n/en/: letswrite.ftl
crates/letswrite-core/migrations/: V1__init.sql  V2__mention_decisions.sql
crates/letswrite-core/src/: db.rs  document.rs  error.rs  i18n.rs  lib.rs  project.rs  settings.rs  watcher.rs
crates/letswrite-import/: Cargo.toml
crates/letswrite-import/src/: detector.rs  entities.rs  lib.rs  mentions.rs  scenes.rs
crates/letswrite-import/tests/: import.rs
docs/: tasks.md
