[workspace]
resolver = "2"
members = [
    "crates/letswrite-app",
    "crates/letswrite-core",
    "crates/letswrite-import",
    "crates/letswrite-ai",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["letswrite contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Iamtsu/letswrite"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Internal crates
letswrite-core = { path = "crates/letswrite-core" }
letswrite-import = { path = "crates/letswrite-import" }
letswrite-ai = { path = "crates/letswrite-ai" }

# UI
iced = { version = "0.13", features = ["tokio", "advanced", "markdown"] }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Error / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# HTTP (AI providers)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"

# Markdown
pulldown-cmark = { version = "0.12", default-features = false }

# Filesystem
notify = "7"
directories = "5"

# Credentials
keyring = "3"

# Text utilities
unicode-segmentation = "1"

# i18n
fluent = "0.16"
fluent-langneg = "0.13"
unic-langid = { version = "0.9", features = ["serde"] }
intl-memoizer = "0.5"

# Test helpers
tempfile = "3"
wiremock = "0.6"
