[package]
name = "letswrite-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
keyring.workspace = true
unic-langid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
