[package]
name = "letswrite-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
directories.workspace = true
unic-langid.workspace = true
fluent.workspace = true
fluent-langneg.workspace = true
intl-memoizer.workspace = true

[dev-dependencies]
tempfile.workspace = true
